add test switch

--- a/connectors/mysql/CMakeLists.txt
+++ b/connectors/mysql/CMakeLists.txt
@@ -55,7 +55,9 @@ if(USE_MYSQL)
     list(APPEND inst_targets sqlpp17-connector-mysql)
     set(inst_targets ${inst_targets} PARENT_SCOPE)
 
-    add_subdirectory(tests)
+    if(ENABLE_TESTS)
+        add_subdirectory(tests)
+    endif()
 
     install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/sqlpp17"
             DESTINATION include
