--- a/connectors/postgresql/CMakeLists.txt
+++ b/connectors/postgresql/CMakeLists.txt
@@ -43,7 +43,9 @@ if(USE_PGSQL)
     list(APPEND inst_targets sqlpp17-connector-postgresql)
     set(inst_targets ${inst_targets} PARENT_SCOPE)
 
-    add_subdirectory(tests)
+    if(ENABLE_TESTS)
+        add_subdirectory(tests)
+    endif()
 
     install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/sqlpp17"
             DESTINATION include
